# invisible_take_home_coding

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  SOLUTION.md  demo.mov  pyproject.toml  test_client.py
infrastructure/: .terraform.lock.hcl  README.md  app.tf  database_local.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables_local.tf
src/: __init__.py  config.py  database.py  db.py  main.py  models.py  repository.py  routes.py  security.py  service.py
tests/: conftest.py  test_api.py  test_client.py  test_models.py  test_repository.py  test_service.py
